--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.3.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
