--- a/external/pom.xml
+++ b/external/pom.xml
@@ -7,26 +7,16 @@
         <groupId>oop.lab</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xml.dao</artifactId>
+    <artifactId>external</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>oop.lab</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>oop.lab</groupId>
-            <artifactId>admin</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>oop.lab</groupId>
-            <artifactId>external</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.8.RELEASE</version>
         </dependency>
     </dependencies>
+
 </project>
